--- a/static/metronic/tpl/sidebar.html
+++ b/static/metronic/tpl/sidebar.html
@@ -10,29 +10,34 @@
 		<li class="start">
 			<a href="#/dashboard.html">
 			<i class="icon-home"></i>
-			<span class="title">Dashboard</span>
+			<span class="title">Ana Sayfa</span>
 			</a>
 		</li>
 		<li>
 			<a href="javascript:;">
 			<i class="icon-settings"></i>
-			<span class="title">AngularJS Features</span>
+			<span class="title">Envanter</span>
 			<span class="arrow "></span>
 			</a>
 			<ul class="sub-menu">
 				<li>
 					<a href="#/ui_bootstrap.html">
-					<i class="icon-puzzle"></i> UI Bootstrap</span>
+					<i class="icon-puzzle"></i> Kategori Ekle</span>
 					</a>
 				</li>
 				<li>
 					<a href="#/file_upload.html">
-					<i class="icon-paper-clip"></i> File Upload</span>
+					<i class="icon-paper-clip"></i> Kategori Listesi</span>
 					</a>
 				</li>
 				<li>
 					<a href="#/ui_select.html">
-					<i class="icon-check"></i> UI Select</span>
+					<i class="icon-check"></i> İHA Ekle</span>
+					</a>
+				</li>
+				<li>
+					<a href="#/ui_select.html">
+					<i class="icon-check"></i> İHA Listesi</span>
 					</a>
 				</li>
 			</ul>
@@ -40,60 +45,37 @@
 		<li>
 			<a href="javascript:;">
 			<i class="icon-wrench"></i>
-			<span class="title">jQuery Plugins</span>
+			<span class="title">Kira</span>
 			<span class="arrow "></span>
 			</a>
 			<ul class="sub-menu">
 				<li>
 					<a href="#/form-tools">
-						<i class="icon-puzzle"></i> Form Tools
+						<i class="icon-puzzle"></i> Kiralama Oluştur
 					</a>
 				</li>
 				<li>
 					<a href="#/pickers">
-						<i class="icon-calendar"></i> Date & Time Pickers
+						<i class="icon-calendar"></i> Kira Listesi
 					</a>
 				</li>
 				<li>
 					<a href="#/dropdowns">
-						<i class="icon-refresh"></i> Custom Dropdowns
+						<i class="icon-refresh"></i> Kira İptal Talepleri
 					</a>
-				</li>
-				<li>
-					<a href="#/tree">
-						<i class="icon-share"></i> Tree View
-					</a>
-				</li>
-				<li>
-					<a href="javascript:;">
-						<i class="icon-briefcase"></i> Datatables
-						<span class="arrow "></span>
-					</a>
-					<ul class="sub-menu">
-						<li>
-							<a href="#/datatables/advanced.html">
-							<i class="icon-tag"></i> Advanced Datatables
-							</a>
-						</li>
-						<li>
-							<a href="#/datatables/ajax.html">
-							<i class="icon-refresh"></i> Ajax Datatables
-							</a>
-						</li>
-					</ul>
 				</li>
 			</ul>
 		</li>
 		<li>
 			<a href="#/profile/dashboard" id="sidebar_menu_link_profile">
 			<i class="icon-user"></i>
-			<span class="title">User Profile</span>
+			<span class="title">Müşteriler</span>
 			</a>
 		</li>
 		<li>
 			<a href="#/todo">
 			<i class="icon-check"></i>
-			<span class="title">Task & Todo</span>
+			<span class="title">Profilim</span>
 			</a>
 		</li>
 		<li>
