IHAKI-7 REFACTOR the admin panel homepage. Created drafts and decided on the pages to be included.

--- a/static/metronic/tpl/sidebar.html
+++ b/static/metronic/tpl/sidebar.html
@@ -79,9 +79,9 @@
 			</a>
 		</li>
 		<li>
-			<a href="../index.html" target="_blank">
+			<a href="/AeroAdmin/Report" target="_blank">
 			<i class="icon-paper-plane"></i>
-			<span class="title">HTML Version</span>
+			<span class="title">Rapor</span>
 			</a>
 		</li>
 	</ul>
