--- a/static/metronic/tpl/footer.html
+++ b/static/metronic/tpl/footer.html
@@ -1,5 +1,5 @@
 <div class="page-footer-inner">
-	2014 &copy; Metronic by keenthemes.
+	©{{ year }} Melih KURU. Akıllı Web Sistemleri Arka Uç Yazılım Teknik Sınavı İçin Gururla Yapıldı.
 </div>
 <div class="scroll-to-top">
 	<i class="icon-arrow-up"></i>
