IHAKI-11 ADD templates for listing UAV,LEASE,CATEGORY forms.

--- a/static/metronic/tpl/footer.html
+++ b/static/metronic/tpl/footer.html
@@ -1,5 +1,5 @@
 <div class="page-footer-inner">
-	©{{ year }} Melih KURU. Akıllı Web Sistemleri Arka Uç Yazılım Teknik Sınavı İçin Gururla Yapıldı.
+	©2024 Melih KURU. Akıllı Web Sistemleri Arka Uç Yazılım Teknik Sınavı İçin Gururla Yapıldı.
 </div>
 <div class="scroll-to-top">
 	<i class="icon-arrow-up"></i>
