--- a/static/metronic/tpl/sidebar.html
+++ b/static/metronic/tpl/sidebar.html
@@ -8,36 +8,36 @@
 	<!-- DOC: Set data-auto-speed="200" to adjust the sub menu slide up/down speed -->
 	<ul class="page-sidebar-menu page-sidebar-menu-hover-submenu" data-keep-expanded="false" data-auto-scroll="true" data-slide-speed="200" ng-class="{'page-sidebar-menu-closed': settings.layout.pageSidebarClosed}">
 		<li class="start">
-			<a href="#/dashboard.html">
+			<a href="#/dashboard">
 			<i class="icon-home"></i>
 			<span class="title">Ana Sayfa</span>
 			</a>
 		</li>
 		<li>
 			<a href="javascript:;">
-			<i class="icon-settings"></i>
+			<i class="icon-paper-plane"></i>
 			<span class="title">Envanter</span>
 			<span class="arrow "></span>
 			</a>
 			<ul class="sub-menu">
 				<li>
-					<a href="#/ui_bootstrap.html">
+					<a href="#/category/add">
 					<i class="icon-puzzle"></i> Kategori Ekle</span>
 					</a>
 				</li>
 				<li>
-					<a href="#/file_upload.html">
+					<a href="#/category/list">
 					<i class="icon-paper-clip"></i> Kategori Listesi</span>
 					</a>
 				</li>
 				<li>
-					<a href="#/ui_select.html">
-					<i class="icon-check"></i> İHA Ekle</span>
+					<a href="#/uav/add">
+					<i class="icon-plane"></i> İHA Ekle</span>
 					</a>
 				</li>
 				<li>
-					<a href="#/ui_select.html">
-					<i class="icon-check"></i> İHA Listesi</span>
+					<a href="#/uav/list">
+					<i class="icon-list"></i> İHA Listesi</span>
 					</a>
 				</li>
 			</ul>
@@ -50,37 +50,37 @@
 			</a>
 			<ul class="sub-menu">
 				<li>
-					<a href="#/form-tools">
+					<a href="#/lease/create">
 						<i class="icon-puzzle"></i> Kiralama Oluştur
 					</a>
 				</li>
 				<li>
-					<a href="#/pickers">
+					<a href="#/lease/list">
 						<i class="icon-calendar"></i> Kira Listesi
 					</a>
 				</li>
 				<li>
-					<a href="#/dropdowns">
+					<a href="#/lease/cancel/list">
 						<i class="icon-refresh"></i> Kira İptal Talepleri
 					</a>
 				</li>
 			</ul>
 		</li>
 		<li>
-			<a href="#/profile/dashboard" id="sidebar_menu_link_profile">
+			<a href="#/customer/list" id="sidebar_menu_link_profile">
 			<i class="icon-user"></i>
 			<span class="title">Müşteriler</span>
 			</a>
 		</li>
 		<li>
-			<a href="#/todo">
-			<i class="icon-check"></i>
-			<span class="title">Profilim</span>
+			<a href="#/settings">
+			<i class="icon-settings"></i>
+			<span class="title">Ayarlar</span>
 			</a>
 		</li>
 		<li>
 			<a href="/AeroAdmin/Report" target="_blank">
-			<i class="icon-paper-plane"></i>
+			<i class="icon-diamond"></i>
 			<span class="title">Rapor</span>
 			</a>
 		</li>
