IHAKI-13 Completed datatable integration with AJAX for. Implemented entity editing and deletion systems. Added live statistics to the dashboard.

--- a/static/metronic/tpl/sidebar.html
+++ b/static/metronic/tpl/sidebar.html
@@ -59,11 +59,6 @@
 						<i class="icon-calendar"></i> Kira Listesi
 					</a>
 				</li>
-				<li>
-					<a href="#/lease/cancel/list">
-						<i class="icon-refresh"></i> Kira İptal Talepleri
-					</a>
-				</li>
 			</ul>
 		</li>
 		<li>
@@ -79,9 +74,9 @@
 			</a>
 		</li>
 		<li>
-			<a href="/AeroAdmin/Report" target="_blank">
-			<i class="icon-diamond"></i>
-			<span class="title">Rapor</span>
+			<a href="/AeroAdmin/Logout">
+			<i class="icon-lock"></i>
+			<span class="title">Güveli Çıkış</span>
 			</a>
 		</li>
 	</ul>
