--- a/static/metronic/tpl/sidebar_lease.html
+++ b/static/metronic/tpl/sidebar_lease.html
@@ -22,7 +22,7 @@
         </li>
         <li>
             <a href="#/settings">
-                <i class="icon-settings"></i>
+                <i class="icon-list"></i>
                 <span class="title">Kira Listem</span>
             </a>
         </li>
